# theremultime

./: .gitignore  CMakeLists.txt  README.md  color.py  main.cpp
camerafront/: CMakeLists.txt  camerafront.cpp  camerafront.hpp
cameraup/: CMakeLists.txt  cameraup.cpp
sound/: 0_sound_alsa.cpp  1_sound.cpp  1_sound.hpp  Makefile
